feat: major cleanups